--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,125 @@
-body, .container, #menu, #header, #map, .city, .filter, .list, .list-item, #content, #currentItem {
+/* reset */ 
+html, body, main, #menu, #map, .title, .head, .filter, .list, .filter input, .filter button, .list li, .list-box button {
     padding: 0;
     margin: 0;
 }
-html, body {
+
+html, body, main {
+    width: 100%;
     height: 100%;
     font-family: "Microsoft Yahei";
 }
-.container {
-    height: 100%;
+
+main {
     position: relative;
 }
+/* menu */
 #menu {
     position: absolute;
-    top: 15px;
-    left: 15px;
-    width: 300px;
-    height: 90%;
-    color: #fff;
-    overflow: hidden;
-    box-shadow: 2px 2px 2px #ccc;
+    left: 2%;
+    top: 4%;
     z-index: 99;
+    width: 300px;
+    height: 80%;
+    border-radius: 6px;
+    box-shadow: 2px 2px 2px #ccc;
 }
-#header {
-    background: #000;
-}           
-#map {
-    width: 100%;
-    height: 100%;
+.head, .title, .filter {
+    background: rgba(0, 0, 0, 0.9);    
 }
-.city, .filter {
-    padding: 0 4% 4% 4%;
+.head {
+    display: flex;    
+    padding: 20px 20px 10px 20px;
+    font-size: 12px;
+    justify-content: space-between;
+    border-radius: 6px 6px 0 0;
 }
-.city {
-    padding-top: 4%;
-    margin-left: 20%;
-    height: 4%;
-    float: left;
-}        
-.list {
-    margin-top: 2%;
-    height: 84%;
-    overflow: auto;
-    list-style: none;            
-    background: rgba(0, 0, 0, 0.6);
-}
-.list-item {
-    padding: 2% 4% 2% 4%;
+.title {
     font-size: 16px;
-    line-height: 20px;
-    text-align: justify;
+    color: #fff;
 }
-.list-item:hover {
+.filter {
+    padding: 0 20px 20px 20px;
+}
+.filter button, .head button {   
+    padding: 1px 10px;
+}
+.selector {
+    color: #fff;
+}
+.triangle-left {
+    position: absolute;
+    top: 20px;
+    left: -40px;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 20px solid transparent;
+    border-right: 20px solid rgba(0, 0, 0, 0.7);
+    width: 0;
+    height: 0;
+}
+.weather-box {
+    position: absolute;
+    left: 330px;
+    top: 0;
+    padding: 20px;
+    width: 60px;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 6px;
+}
+.list-box, .detail {
+    margin-top: 10px;
+    border-radius: 0 0 6px 6px;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.7);
+    overflow: auto;
+}
+.list-box {
+    padding: 10px;
+    height: 75%;
+}
+.detail {
+    padding: 10px 20px;
+}
+.list-box button {
+    margin: 5px auto;
+    padding: 5px;
+    width: 100%;
+    background: #FFFFCC;
+    border: none;
+}
+.list {
+    list-style: none;
+    text-align: left;
+}
+.list li {
+   padding: 5px 10px;
+}
+.list li:hover {
     background: #222;
 }
-#content {
-    float: right;
-    padding-top: 4%;
-    padding-right: 2%;            
+.address {
+    font-size: 12px;
+    font-style: italic;
+    color: #eee;
 }
-#content:after {
-    margin-right: 6px;
-    content: '地图';
+.address:before {
+    content: '地址：';
 }
-.filter button {
-    padding: 0 3px;
-}
-#currentItem {
-    background: rgba(0, 0, 0, 0.6);
-    margin-top: 2%;
-    padding: 2%;
-}
+/* show-menu */
 #show-menu {
     position: absolute;
     left: 30px;
-    top: 26px;
+    top: 40px;
     padding: 4px;
     z-index: 100;
     border-radius: 6px;
+}
+/* map */
+
+#map {
+    width: 100%;
+    height: 100%;
+    background: #333;
 }
